--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.4.0",
     "jwt-decode": "^3.0.0-beta.2",
     "node-sass": "^4.14.1",
+    "query-string": "^6.13.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-drag-sortable": "^1.0.6",
