--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@tinymce/tinymce-react": "^3.9.0",
     "antd": "^4.4.0",
     "jwt-decode": "^3.0.0-beta.2",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "query-string": "^6.13.8",
     "react": "^16.13.1",
